<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?android:attr/windowBackground"
    tools:ignore="Overdraw"
    tools:keep="@layout/fragment_settings">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        style="@style/TextAppearance.Dicoding.Headline"
        android:textSize="16sp"
        android:text="@string/dicoding_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator_line_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_settings"
        app:layout_constraintStart_toStartOf="@id/tv_settings"
        app:layout_constraintEnd_toEndOf="@id/tv_settings" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/separator_line_1"
        app:layout_constraintStart_toStartOf="@id/tv_settings"
        app:layout_constraintEnd_toEndOf="@id/tv_settings"
        android:orientation="vertical"
        android:layout_marginStart="10dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            style="@style/TextAppearance.Dicoding.Body"
            android:textSize="16sp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_daily_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_notification"
            style="@style/TextAppearance.Dicoding.Body"
            android:checked="false"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
